--- a/MZI_IPR/IPR/IPR.vcxproj.filters
+++ b/MZI_IPR/IPR/IPR.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="des.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rsa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -35,8 +38,12 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rsa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="des_data.txt" />
+    <Text Include="rsa_data.txt" />
   </ItemGroup>
 </Project>
