--- a/MZI_IPR/IPR/IPR.vcxproj.filters
+++ b/MZI_IPR/IPR/IPR.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="rsa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gost28147.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -41,9 +44,13 @@
     <ClInclude Include="rsa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gost28147.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="des_data.txt" />
     <Text Include="rsa_data.txt" />
+    <Text Include="gost_data.txt" />
   </ItemGroup>
 </Project>
