--- a/MZI/MZI/MZI.vcxproj
+++ b/MZI/MZI/MZI.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="common.cpp" />
     <ClCompile Include="des.cpp" />
     <ClCompile Include="gost28147.cpp" />
+    <ClCompile Include="gost3411.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="rsa.cpp" />
   </ItemGroup>
@@ -162,6 +163,7 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="des.h" />
     <ClInclude Include="gost28147.h" />
+    <ClInclude Include="gost3411.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="rsa.h" />
   </ItemGroup>
@@ -170,6 +172,9 @@
       <DeploymentContent>true</DeploymentContent>
     </Text>
     <Text Include="gost_data.txt">
+      <DeploymentContent>true</DeploymentContent>
+    </Text>
+    <Text Include="gost_hash.txt">
       <DeploymentContent>true</DeploymentContent>
     </Text>
     <Text Include="rsa_data.txt">
