--- a/MZI/MZI/MZI.vcxproj.filters
+++ b/MZI/MZI/MZI.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="gost28147.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gost3411.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -47,10 +50,14 @@
     <ClInclude Include="gost28147.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gost3411.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="des_data.txt" />
     <Text Include="rsa_data.txt" />
     <Text Include="gost_data.txt" />
+    <Text Include="gost_hash.txt" />
   </ItemGroup>
 </Project>
